fixed text overflow for dropdowns

--- a/app/assets/stylesheets/partials/_sidebar.css.sass
+++ b/app/assets/stylesheets/partials/_sidebar.css.sass
@@ -13,17 +13,16 @@
   left: 0
   top: 0
 a.site-selector
-  background: $button-bg-color
-  text-shadow: 0 1px 0 lighten($button-bg-color, 10%)
-  color: $text-color
+  background: #818C96
+  text-shadow: 0 1px 0 darken(#818C96, 7%)
+  color: #fff
   font-weight: bold
   display: block
   padding: 14px 45px 13px 15px
   position: relative
   overflow: hidden
   text-overflow: ellipsis
-  &.active
-    box-shadow: 0 1px 3px darken(#e7e7e7, 5%) inset
+
 
   .message-tick
     position: absolute
@@ -36,6 +35,9 @@ a.site-selector
     position: absolute
     right: 18px
     top: 21px
+  & > div
+    text-overflow: ellipsis
+    overflow: hidden
 
 
 .site-selector-options
@@ -57,6 +59,9 @@ a.site-selector
     display: block
     padding: 10px 15px
     color: $text-color
+    text-overflow: ellipsis
+    overflow: hidden
+    white-space: nowrap
     @include transition(.2s)
     &.new
       font-weight: $bold
@@ -69,7 +74,7 @@ a.site-selector
   opacity: 1
   visibility: visible
   margin-top: 0
-  
+
 
 .chat-item-tab
   .message-tick
